<resources>
    <string name="home">Home</string>
    <string name="add_group">Add Group: </string>
    <string name="edit_group">Edit Group: </string>
    <string name="group">Group</string>
    <string name="tracker">Tracker</string>
    <string name="graph_or_stat">Graph or Statistic</string>
    <string name="add_feature">Track something:</string>
    <string name="add">Add</string>
    <string name="group_name">e.g. Daily Activities</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="new_name">New name: </string>
    <string name="graph_or_stat_name">Graph name: </string>
    <string name="feature_name">What would you like to track?</string>
    <string name="feature_type">What type of data is this?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="select_file">Select File</string>
    <string name="empty_group_hint">Welcome to Track &amp; Graph!\n\n Tap + in the top right and select Tracker to get started.</string>
    <string name="no_features_graph_stats_hint">Please create a Tracker before creating any graphs.</string>
    <string name="ru_sure_del_group">Are you sure you want to delete this group and everything in it? You can not reverse this.</string>
    <string name="ru_sure_del_graph">Are you sure you want to delete this graph? You can not reverse this. You will not lose any tracked data.</string>
    <string name="ru_sure_del_feature">Are you sure you want to delete this tracked data?</string>
    <string name="ru_sure_del_data_point">Are you sure you want to delete this data point?</string>
    <string name="export_file_name_suffix" translatable="false">%1$s-%2$s-%3$04d%4$02d%5$02d-%6$02d%7$02d%8$02d.csv</string>
    <string name="backup_file_name_suffix" translatable="false">%1$s-%2$04d%3$02d%4$02d-%5$02d%6$02d%7$02d.db</string>
    <string name="discrete_values">Add some choices below.</string>
    <string name="feature_name_cannot_be_null">Please add a name</string>
    <string name="feature_with_that_name_exists">You are already tracking something with that name</string>
    <string name="discrete_value_must_have_name">Please make sure all your choices have names</string>
    <string name="discrete_feature_needs_at_least_two_values">Please add at least two multiple choice answers</string>
    <string name="data_points">%1$d Tracked</string>
    <string name="no_data">No Data</string>
    <string name="add_data_point_hint">Enter a value for:</string>
    <string name="skip">Skip</string>
    <string name="exportButton">Export</string>
    <string name="importButton">Import</string>
    <string name="export_to">Export tracked data in this group to CSV:</string>
    <string name="import_from">Import tracked data to this group from CSV:</string>
    <string name="import_warning">Warning: Importing is irreversible. Track &amp; Graph will try to merge any imported data with existing data in this group by name.</string>
    <string name="graphs_and_statistics"><![CDATA[Graphs & Statistics]]></string>
    <string name="add_a_graph_or_stat">Add a Graph or Statistic</string>
    <string name="graph_type_label">Graph type:</string>
    <string name="maximum_sample_duration">Sample size:</string>
    <string name="select_a_discrete_feature">Select a multiple choice data set: </string>
    <string name="no_discrete_features_pie_chart">You can not currently create a pie chart because you are not tracking anything multiple choice.</string>
    <string name="select_a_feature">Select a data set:</string>
    <string name="offset">Offset:</string>
    <string name="scale">Scale:</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="select_a_value_range">Select a value range:</string>
    <string name="graph_name_hint">e.g. Exercise: weekly moving average</string>
    <string name="day">Day</string>
    <string-array name="time_histogram_windows">
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quaterly</item>
        <item>Biyearly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="date_formats">
        <item>dd/mm/yy</item>
        <item>mm/dd/yy</item>
        <item>yy/mm/dd</item>
    </string-array>
    <string-array name="theme_names_pre_Q">
        <item>Battery Saver</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="theme_names_Q">
        <item>System Default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="numeric_duration_conversion_modes">
        <item>Number of hours</item>
        <item>Number of minutes</item>
        <item>Number of seconds</item>
    </string-array>
    <string-array name="feature_types">
        <item>Multiple choice</item>
        <item>Numerical</item>
        <item>Time duration</item>
    </string-array>
    <string-array name="graph_types">
        <item>Line Graph</item>
        <item>Pie Chart</item>
        <item>Average Time Between</item>
        <item>Time Since</item>
        <item>Time Histogram</item>
    </string-array>
    <string-array name="line_graph_feature_modes">
        <item>No Averaging</item>
        <item>Daily Moving Average</item>
        <item>Three Day Moving Average</item>
        <item>Weekly Moving Average</item>
        <item>Monthly Moving Average</item>
        <item>Three Month Moving Average</item>
        <item>Six Month Moving Average</item>
        <item>Yearly Moving Average</item>
    </string-array>
    <string-array name="line_graph_generation_modes">
        <item>Plot When Tracked</item>
        <item>Plot Hourly Totals</item>
        <item>Plot Daily Totals</item>
        <item>Plot Weekly Totals</item>
        <item>Plot Monthly Totals</item>
        <item>Plot Yearly Totals</item>
    </string-array>
    <string name="about">About</string>
    <string name="faq_1">How do I start tracking something?</string>
    <string name="faq_2">How do I import / export what I have tracked?</string>
    <string name="faq_3">How does multiple choice data work?</string>
    <string name="faq_4">How do I start creating graphs?</string>
    <string name="faq_5">How are moving averages and plot totals calculated?</string>
    <string name="faq_6">How do notes work?</string>
    <string name="faq">FAQ</string>
    <string name="faq_text_5_1">Moving averages:</string>
    <string name="faq_text_5_2">Suppose we want to track something simply as a yes or no question, for example:</string>
    <string name="faq_text_5_3">If we were to track this data over time without using a moving average it might look like this:</string>
    <string name="faq_text_5_4">This output is very accurate but not very helpful. To make it easier to understand the data we could use a monthly moving average:</string>
    <string name="faq_text_5_5">Now instead of plotting each data point with the recorded Y value (0 or 1), each Y value is calculated as the mean of itself and all previous data points within the selected time range prior.</string>
    <string name="faq_text_5_6">Generally speaking the longer the selected averaging period the smoother the curve will appear. However note that moving averages are lagging indicators. The longer the averaging period, the further behind the real value the curve will lag.</string>
    <string name="faq_text_5_7">Plot totals:</string>
    <string name="faq_text_5_8">Some things you may only want to track rarely. For example, you may want to track when you finish reading a book:</string>
    <string name="faq_text_5_9">Suppose you tracked the following:</string>
    <string name="faq_text_5_10">You may or may not then be surprised to find that your graph appears as follows:</string>
    <string name="faq_text_5_11">The problem is that lines are drawn only from each plotted value to the next plotted value. Since all plotted values are interpreted as 1 you only see a straight line at the point 1 on the Y axis.</string>
    <string name="faq_text_5_12">We can fix this using plot totals. For example if we plot monthly totals we would see the following graph:</string>
    <string name="faq_text_5_13">Notice a point is plotted at the end of each month representing the total of all tracked values in that month.</string>
    <string name="faq_text_5_14">You can use scale, offset, averaging and totals all at once. The order of precedence is as follows:</string>
    <string name="faq_text_5_15">• First your data is converted to totals\n\n• Then each point is converted to its moving average\n\n• Then your points are multiplied by the scale value\n\n• Finally the offset is added to each point</string>
    <string name="faq_7">How do time histograms work?</string>
    <string name="faq_text_7_1"><![CDATA[Histograms are useful for showing how data is distributed over a given domain. Time histograms in Track & Graph allow you to see how your data is distributed over various time periods.]]></string>
    <string name="faq_text_7_2">For example imagine you had tracked 7 weeks worth of data on how much time you spent reading. You may wish to know on what days during the week do you typically spend the most time reading. Here you could use a time histogram with the following setup:</string>
    <string name="faq_text_7_3">To generate the following histogram:</string>
    <string name="faq_text_7_4">The histogram is calculated simply by taking every data point within the sample and adding its value to a \"bin\" based on which day of the week that value was tracked. So the day 1 bin represents the total of all data points tracked on Mondays divided by the total of all data points in the sample. Histograms are \"normalised\" meaning that the sum of all the heights of the bars (or the area under the graph) should add up to exactly 1. So for example if you only ever read on Fridays you would expect your histogram to only show one bar for Friday with height 1.</string>
    <string name="faq_text_7_5">If you read on Saturday 50% of the time and on Friday 50% of the time you would expect your histogram to look like this:</string>
    <string name="faq_text_7_6"><![CDATA[If the data you are tracking is multiple choice then Track & Graph will show you the distribution within each bar of the amount made up by each choice tracked like so:]]></string>
    <string name="faq_text_7_7">By default the height of each bar is relative to the sum of all the data point values that fall in that time range. However if the value of each of your choices should be the same (i.e. the choices represent un-ordered discrete data) then your histogram will be incorrectly skewed like so:</string>
    <string name="faq_text_7_8">(notice the index of Sparrow is 0 so it doesn\'t even show up on the histogram)</string>
    <string name="faq_text_7_9">To fix this you can check the box marked: \"Check here to count the number of data points tracked rather than the total of their values.\"</string>
    <string name="faq_text_7_10">This way each multiple choice answer will be regarded as having the same weight in the histogram like so:</string>
    <string name="faq_text_7_11">One final note to bare in mind is that your data may be skewed by the fact that you have not tracked data for each histogram bin yet or have not tracked them all equally yet. So for example if you are drawing a yearly histogram but have only been tracking for 6 months then your histogram may look like this:</string>
    <string name="faq_text_7_12">And a year later it may look like this:</string>
    <string name="faq_text_7_13">Over time however this skew will tend to 0. Therefore the more data you have tracked the more accurate the histogram will be.</string>
</resources>