<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ap_white"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ap_white"
            android:paddingBottom="40dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_5"
                android:padding="20dp"
                android:textStyle="bold"
                android:textSize="17sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_1"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_2"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/faq_image_5_1"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_3"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/faq_image_5_2"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_4"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/faq_image_5_3"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_5"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_6"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_7"
                android:textStyle="bold"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_8"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/faq_image_5_4"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_9"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/faq_image_5_5"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_10"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/faq_image_5_6"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_11"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_12"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:scaleType="fitStart"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/faq_image_5_7"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_13"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_14"
                android:textSize="15sp"
                android:padding="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/faq_text_5_15"
                android:textSize="15sp"
                android:paddingBottom="20dp"
                android:paddingLeft="40dp"
                android:paddingRight="20dp"
                />
        </LinearLayout>
    </ScrollView>
</layout>
