<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:orientation="vertical">

        <TextView
            android:id="@+id/faq1"
            style="@style/Style.FAQMenuItem"
            android:text="@string/faq_1" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:srcCompat="@drawable/left_to_right_gradient"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/faq2"
            style="@style/Style.FAQMenuItem"
            android:text="@string/faq_2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:srcCompat="@drawable/left_to_right_gradient"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/faq3"
            style="@style/Style.FAQMenuItem"
            android:text="@string/faq_3" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:srcCompat="@drawable/left_to_right_gradient"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/faq4"
            style="@style/Style.FAQMenuItem"
            android:text="@string/faq_4" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:srcCompat="@drawable/left_to_right_gradient"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/faq5"
            style="@style/Style.FAQMenuItem"
            android:text="@string/faq_5" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:srcCompat="@drawable/left_to_right_gradient"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/faq6"
            style="@style/Style.FAQMenuItem"
            android:text="@string/faq_6" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:srcCompat="@drawable/left_to_right_gradient"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/faq7"
            style="@style/Style.FAQMenuItem"
            android:text="@string/faq_7" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:srcCompat="@drawable/left_to_right_gradient"
            tools:ignore="ContentDescription" />
    </LinearLayout>
</layout>
