<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_7"
                android:textAppearance="@style/TextAppearance.Subtitle2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_1"
                android:textAppearance="@style/TextAppearance.Body" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_2"
                android:textAppearance="@style/TextAppearance.Body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/faq_image_7_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_3"
                android:textAppearance="@style/TextAppearance.Body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/faq_image_7_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_4"
                android:textAppearance="@style/TextAppearance.Body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/faq_image_7_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_5"
                android:textAppearance="@style/TextAppearance.Body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/faq_image_7_4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_6"
                android:textAppearance="@style/TextAppearance.Body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/faq_image_7_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_7"
                android:textAppearance="@style/TextAppearance.Body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/faq_image_7_6" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_8"
                android:textAppearance="@style/TextAppearance.Body" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_9"
                android:textAppearance="@style/TextAppearance.Body" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_10"
                android:textAppearance="@style/TextAppearance.Body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/faq_image_7_7" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_11"
                android:textAppearance="@style/TextAppearance.Body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/faq_image_7_8" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_12"
                android:textAppearance="@style/TextAppearance.Body" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:padding="20dp"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/faq_image_7_9" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/faq_text_7_13"
                android:textAppearance="@style/TextAppearance.Body" />
        </LinearLayout>
    </ScrollView>
</layout>
