<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  This file is part of Track & Graph
  ~
  ~  Track & Graph is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Track & Graph is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Track & Graph.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/import_button"
        android:title="@string/importButton"
        android:icon="@drawable/import_icon"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="always" />

    <item android:id="@+id/export_button"
        android:title="@string/exportButton"
        android:icon="@drawable/export_icon"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="always" />
    <item
        android:id="@+id/add_tracker"
        android:title="@string/tracker"
        android:icon="@drawable/add_icon"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_graph_stat"
        android:title="@string/graph_or_stat"
        android:icon="@drawable/add_icon"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_group"
        android:title="@string/group"
        android:icon="@drawable/add_icon"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="never" />
<!--
    <item
        android:id="@+id/add_function"
        android:title="@string/function"
        android:icon="@drawable/add_icon"
        app:iconTint="?attr/colorControlNormal"
        app:showAsAction="never" />
-->
</menu>