<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/graphAndTrack">
        <item
            android:id="@+id/selectTrackGroupFragment"
            android:icon="@drawable/dash"
            app:iconTint="@color/primaryColor"
            android:title="@string/track_groups"
            />
        <item
            android:id="@+id/selectGraphStatGroupFragment"
            android:icon="@drawable/dash"
            app:iconTint="@color/secondaryColor"
            android:title="@string/graphs_and_statistics"
            />
    </group>

    <group android:id="@+id/aboutAndFAQ">
        <item
            android:id="@+id/FAQFragment"
            android:title="@string/faq"
            />
        <item
            android:id="@+id/aboutPageFragment"
            android:title="@string/about"
            />
    </group>

</menu>